--- a/index.html
+++ b/index.html
@@ -37,35 +37,53 @@
 
 
 		<!-- Header -->
-			<header id="header" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; text-align: center; padding-bottom: 30px;">
-			    <div class="inner">
-			        <h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0 0 10px 0;"><strong>Parham Ashur</strong></h2>
-			        <h2 style="font-size: 24px; line-height: 100%; margin: 0 0 10px 0;">PhD Candidate</h2>
-			        <a href="mailto:ashur@em-lyon.com" style="margin: 0; text-decoration: none; color: inherit;">ashur@em-lyon.com</a>
-			    </div>
-			  <div class="inner">
-			    <ul class="icons" style="list-style: none; padding: 0; margin: 10px 0;">
-			      <li style="display: inline-block; margin: 0 10px;">
-			        <a href="https://www.linkedin.com/in/parham-ashur" class="icon brands fa-linkedin" target="_blank" style="text-decoration: none; color: inherit;">
-			          <span class="label">Linkedin</span>
-			        </a>
-			      </li>
-			      <li style="display: inline-block; margin: 0 10px;">
-			        <a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope" style="text-decoration: none; color: inherit;">
-			          <span class="label">Email</span>
-			        </a>
-			      </li>
-			    </ul>
-			    <ul class="copyright" style="list-style: none; padding: 0; margin: 10px 0;">
-			      <li style="display: inline-block; margin: 0 10px;">
-			        <a href="pdf/Parham_Ashur_CV_Feb 25.pdf" download="Parham_Ashur_CV_Feb 25.pdf" target="_blank" style="text-decoration: none; color: inherit;">Download CV</a>
-			      </li>
-			      <li style="display: inline-block; margin: 0 10px;">
-			        <a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank" style="text-decoration: none; color: inherit;">STORM Research Center</a>
-			      </li>
-			    </ul>
-			  </div>
-			</header>
+		<header id="header">
+		      <div class="inner">
+		        <h2 id="name1"><strong>Parham Ashur</strong></h2>
+		        <h2>PhD Candidate</h2>
+		        <a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
+		      </div>
+		      <div class="inner">
+		        <ul class="icons">
+		          <li>
+		            <a
+		              href="https://www.linkedin.com/in/parham-ashur"
+		              class="icon brands fa-linkedin"
+		              target="_blank"
+		            >
+		              <span class="label">LinkedIn</span>
+		            </a>
+		          </li>
+		          <li>
+		            <a
+		              href="mailto:ashur@em-lyon.com"
+		              class="icon solid fa-envelope"
+		            >
+		              <span class="label">Email</span>
+		            </a>
+		          </li>
+		        </ul>
+		        <ul class="copyright">
+		          <li>
+		            <a
+		              href="pdf/Parham_Ashur_CV_Feb 25.pdf"
+		              download="Parham_Ashur_CV_Feb 25.pdf"
+		              target="_blank"
+		            >
+		              Download CV
+		            </a>
+		          </li>
+		          <li>
+		            <a
+		              href="https://www.storm.em-lyon.com/people/parham-ashur/"
+		              target="_blank"
+		            >
+		              STORM Research Center
+		            </a>
+		          </li>
+		        </ul>
+		      </div>
+		    </header>
 			<!--<header id="header">
 				<div style="text-align: center;" class="inner">
 					<!-- <a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
