--- a/index.html
+++ b/index.html
@@ -37,56 +37,9 @@
 
 
 		<!-- Header -->
-		<header id="header">
-		      <div class="inner">
-		        <h2 id="name1"><strong>Parham Ashur</strong></h2>
-		        <h2>PhD Candidate</h2>
-		        <a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
-		      </div>
-		      <div class="inner">
-		        <ul class="icons">
-		          <li>
-		            <a
-		              href="https://www.linkedin.com/in/parham-ashur"
-		              class="icon brands fa-linkedin"
-		              target="_blank"
-		            >
-		              <span class="label">LinkedIn</span>
-		            </a>
-		          </li>
-		          <li>
-		            <a
-		              href="mailto:ashur@em-lyon.com"
-		              class="icon solid fa-envelope"
-		            >
-		              <span class="label">Email</span>
-		            </a>
-		          </li>
-		        </ul>
-		        <ul class="copyright">
-		          <li>
-		            <a
-		              href="pdf/Parham_Ashur_CV_Feb 25.pdf"
-		              download="Parham_Ashur_CV_Feb 25.pdf"
-		              target="_blank"
-		            >
-		              Download CV
-		            </a>
-		          </li>
-		          <li>
-		            <a
-		              href="https://www.storm.em-lyon.com/people/parham-ashur/"
-		              target="_blank"
-		            >
-		              STORM Research Center
-		            </a>
-		          </li>
-		        </ul>
-		      </div>
-		    </header>
-			<!--<header id="header">
+			<header id="header">
 				<div style="text-align: center;" class="inner">
-					<!-- <a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
+					<a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
 					
 					<br><br><br><br><br><br><br><br><br><be>
 					<h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0 0 10px 0;"><strong>Parham Ashur</strong></h2>
@@ -95,11 +48,11 @@
 	
 					<!--<h2 id="name1" style="font-size: 36px; line-height:100%"><strong>Parham Ashur</strong></h2>
 					<h2 style="font-size: 24px; line-height:100%">PhD Candidate</h2>
-					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
+					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>-->
 	
 				</div>
 			</header>
-			<footer id="footer">
+			<!--<footer id="footer">
 				<div style="text-align: center;" class="inner">
 					<ul class="icons">
 						<!-- <li><a href="https://mobile.twitter.com/parhamashur" class="fa-brands fa-x-twitter" target="_blank"><span class="label">Twitter</span></a></li> -->
