--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div style="text-align: center;" class="inner">
-					<a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
+					<!--<a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>-->
 					
 					<br><br><br><br><br><br><br><br><br><be>
 					<h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0 0 10px 0;"><strong>Parham Ashur</strong></h2>
