--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 					<br><br><br><br><br><br><br><br><br><be>
 					<h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0 0 10px 0;"><strong>Parham Ashur</strong></h2>
 					<h2 style="font-size: 24px; line-height: 100%; margin: 0 0 10px 0;">PhD Candidate</h2>
-					<a href="mailto:ashur@em-lyon.com" style="margin: 0; border-bottom: none;">ashur@em-lyon.com</a>
-	
+					<a href="mailto:ashur@em-lyon.com" style="margin: 0; text-decoration: none; border-bottom: none; color: inherit;">ashur@em-lyon.com</a>	
 					<!--<h2 id="name1" style="font-size: 36px; line-height:100%"><strong>Parham Ashur</strong></h2>
 					<h2 style="font-size: 24px; line-height:100%">PhD Candidate</h2>
 					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>-->
