--- a/index.html
+++ b/index.html
@@ -37,9 +37,20 @@
 
 
 		<!-- Header -->
-			<header id="header">
+			<header id="header" style="padding: 3em 1em; text-align: center; background-color: #f0f0f0;">
+			  <div class="inner" style="max-width: 600px; margin: 0 auto;">
+			    <!-- Uncomment the image below if you wish to include an avatar -->
+			    <!-- <img src="images/parham-pic.jpeg" alt="Parham Ashur" style="width:150px; height:150px; border-radius:50%; margin-bottom:1em;"> -->
+			    <h2 id="name1" style="margin: 0.5em 0; line-height: 1.2;"><strong>Parham Ashur</strong></h2>
+			    <h2 style="margin: 0.5em 0; line-height: 1.2;">PhD Candidate</h2>
+			    <a href="mailto:ashur@em-lyon.com" style="display: inline-block; margin-top: 1em; text-decoration: none; border-bottom: none; color: inherit;">
+			      ashur@em-lyon.com
+			    </a>
+			  </div>
+			</header>
+			<!--<!--<header id="header">
 				<div style="text-align: center;" class="inner">
-					<!--<a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>-->
+					<!--<a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
 					
 					<br><br><br><br><br><br><br><br><br><be>
 					<h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0 0 10px 0;"><strong>Parham Ashur</strong></h2>
