--- a/index.html
+++ b/index.html
@@ -37,15 +37,11 @@
 
 
 		<!-- Header -->
-			<header id="header" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; padding: 3em 1em; text-align: center; background-color: #f0f0f0;">
-			  <div class="inner" style="max-width: 600px; margin: 0 auto;">
-			    <!-- Optional avatar image -->
-			    <!-- <img src="images/parham-pic.jpeg" alt="Parham Ashur" style="width:150px; height:150px; border-radius:50%; margin-bottom:1em;"> -->
-			    <h2 id="name1" style="margin: 0.5em 0; line-height: 1.2; font-size: 36px;"><strong>Parham Ashur</strong></h2>
-			    <h2 style="margin: 0.5em 0; line-height: 1.2; font-size: 24px;">PhD Candidate</h2>
-			    <a href="mailto:ashur@em-lyon.com" style="display: inline-block; margin-top: 1em; text-decoration: none; border-bottom: none; color: inherit;">
-			      ashur@em-lyon.com
-			    </a>
+			<header id="header" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; background-color: #f0f0f0; text-align: center;">
+			  <div>
+			    <h2 style="font-size: 36px; margin: 0 0 10px;">Parham Ashur</h2>
+			    <h2 style="font-size: 24px; margin: 0 0 10px;">PhD Candidate</h2>
+			    <a href="mailto:ashur@em-lyon.com" style="text-decoration: none; color: inherit;">ashur@em-lyon.com</a>
 			  </div>
 			</header>
 			<!--<!--<header id="header">
