--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<a href="mailto:ashur@em-lyon.com" style="margin: 0; text-decoration: none; border-bottom: none; color: inherit;">ashur@em-lyon.com</a>	
 					<!--<h2 id="name1" style="font-size: 36px; line-height:100%"><strong>Parham Ashur</strong></h2>
 					<h2 style="font-size: 24px; line-height:100%">PhD Candidate</h2>
-					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>-->
+					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
 	
 				</div>
 			</header>
