--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			  <div>
 			    <h2 style="font-size: 36px; margin: 0 0 10px;">Parham Ashur</h2>
 			    <h2 style="font-size: 24px; margin: 0 0 10px;">PhD Candidate</h2>
-				<a href="mailto:ashur@em-lyon.com" style="margin: 0; text-decoration: none; border-bottom: none; color: inherit;">ashur@em-lyon.com</a>			  </div>
+				<a href="mailto:ashur@em-lyon.com" style="margin: 0; border-bottom: none; color: inherit;">ashur@em-lyon.com</a>			  </div>
 			</header>
 			<!--<!--<header id="header">
 				<div style="text-align: center;" class="inner">
