--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 		<!-- Header -->
 			<header id="header" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; background-color: #f0f0f0; text-align: center;">
 			  <div>
-			    <h2 style="font-size: 36px; margin: 0 0 10px;">Parham Ashur</h2>
-			    <h2 style="font-size: 24px; margin: 0 0 10px;">PhD Candidate</h2>
-				<a href="mailto:ashur@em-lyon.com" style="margin: 0; border-bottom: none; color: inherit;">ashur@em-lyon.com</a>			  </div>
+			    <h2 style="margin: 0; font-size: 36px;">Parham Ashur</h2>
+			    <h2 style="margin: 0; font-size: 24px;">PhD Candidate</h2>
+			    <a href="mailto:ashur@em-lyon.com" style="text-decoration: none; color: inherit;">ashur@em-lyon.com</a>
+			  </div>
 			</header>
 			<!--<!--<header id="header">
 				<div style="text-align: center;" class="inner">
