--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
 
 
 		<!-- Header -->
-			<header id="header" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; background-color: #f0f0f0; text-align: center;">
+		<header id="header" style="position: relative; height: 100vh; background-color: #f0f0f0;">
+		  <div style="position: absolute; bottom: 0; left: 0; right: 0; text-align: center; padding-bottom: 20px;">
+		    <h2 style="margin: 0; font-size: 36px;">Parham Ashur</h2>
+		    <h2 style="margin: 0; font-size: 24px;">PhD Candidate</h2>
+		    <a href="mailto:ashur@em-lyon.com" style="text-decoration: none; color: inherit;">ashur@em-lyon.com</a>
+		  </div>
+		</header>
+			<!--<header id="header" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; background-color: #f0f0f0; text-align: center;">
 			  <div>
 			    <h2 style="margin: 0; font-size: 36px;">Parham Ashur</h2>
 			    <h2 style="margin: 0; font-size: 24px;">PhD Candidate</h2>
