--- a/index.html
+++ b/index.html
@@ -563,7 +563,34 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer">
+<footer id="footer" style="margin-top: auto;">
+    <div style="text-align: center;" class="inner">
+      <ul class="icons" style="list-style: none; padding: 0; margin: 0 0 1em 0;">
+        <!-- Uncomment or add other icons as needed -->
+        <li style="display: inline-block; margin: 0 0.5em;">
+          <a href="https://www.linkedin.com/in/parham-ashur" class="icon brands fa-linkedin" target="_blank">
+            <span class="label">Linkedin</span>
+          </a>
+        </li>
+        <li style="display: inline-block; margin: 0 0.5em;">
+          <a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope">
+            <span class="label">Email</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="copyright" style="list-style: none; padding: 0; margin: 0;">
+        <li style="display: inline-block; margin: 0 0.5em;">
+          <a href="pdf/Parham_Ashur_CV_Feb 25.pdf" download="Parham_Ashur_CV_Feb 25.pdf" target="_blank">Download CV</a>
+        </li>
+        <li style="display: inline-block; margin: 0 0.5em;">
+          <a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM Research Center</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+
+		
+			<!--<footer id="footer">
 				<div style="text-align: center;" class="inner">
 					<ul class="icons">
 						<!-- <li><a href="https://mobile.twitter.com/parhamashur" class="fa-brands fa-x-twitter" target="_blank"><span class="label">Twitter</span></a></li>
