--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 		<!-- Header -->
-		<header id="header" style="position: relative; height: 100vh; background-color: #f0f0f0;">
+		<header id="header">
 		  <div style="position: absolute; bottom: 0; left: 0; right: 0; text-align: center; padding-bottom: 20px;">
 		    <h2 style="margin: 0; font-size: 36px;">Parham Ashur</h2>
 		    <h2 style="margin: 0; font-size: 24px;">PhD Candidate</h2>
