--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<h1>I am a PhD candidate in the field of management and organization studies
 							at <a href="https://em-lyon.com/en" target="_blank">EM Lyon Business School</a>, France.</h1>
 						</header>
-						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures on organizations and their audiences across different levels. Using both quantitative and qualitative methods, I apply a cultural perspective to investigate phenomena like 
+						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures on organizations and their audiences. Using both quantitative and qualitative methods, I apply a cultural perspective to investigate phenomena like 
 							institutional persistence and social evaluation. My work spans various empirical contexts, from social housing to creative industry, 
 							including areas such as restaurants, books, and movies.</p>
 						<!-- <ul class="actions">
