--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
 							at <a href="https://em-lyon.com/en" target="_blank">EM Lyon Business School</a>, France.</h1>
 						</header>
 						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures on organizations and their audiences. Using both quantitative and qualitative methods, I apply a cultural perspective to investigate phenomena like 
-							institutional persistence and social evaluation. My work spans various empirical contexts, from social housing to creative industry, 
-							including areas such as restaurants, books, and movies.</p>
+							institutional persistence and social evaluation. My empirical settings include social housing and fine dining.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>-->
