--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
 							<h1>I am a PhD candidate in the field of management and organization studies
 							at <a href="https://em-lyon.com/en" target="_blank">EM Lyon Business School</a>, France.</h1>
 						</header>
-						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures on organizations and their audiences. Using both quantitative and qualitative methods, I apply a cultural perspective to investigate phenomena like 
-							institutional persistence and social evaluation. My empirical settings include social housing and fine dining.</p>
+						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures on organizations and their audiences. 
+							Adopting a cultural perspective, I use quantitative text analysis and econometric models to examine phenomena such as institutional persistence and social evaluation. 
+							My empirical settings include social housing and fine dining.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>-->
