--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						I studied economics at Allameh Tabataba'i University (BA) and the University of Amsterdam (MSc), as well as innovation and management at SKEMA Business School (MSc).</p>
 
 						<ul class="actions">
-							<li><a href="pdf/Parham_Ashur_CV_jan 25.pdf" download="Parham_Ashur_CV_jan 25.pdf" class="button" target="_blank">Download my CV</a></li>
+							<li><a href="pdf/Parham_Ashur_CV_Feb 25.pdf" download="Parham_Ashur_CV_Feb 25.pdf" class="button" target="_blank">Download my CV</a></li>
 							<!-- <li><a href="https://github.com/parham-ashur" class="button" target="_blank">Check my GitHub</a></li>-->
 						</ul>
 					</section> 
