--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<section id="one">
 						<header class="major">
 							<h1>I am a PhD candidate in the field of management and organization studies
-							at <a href="https://em-lyon.com/en" target="_blank">EM Lyon Business School</a>, France.</h1>
+							at <a href="https://em-lyon.com/faculte-recherche/recherche/programme-phd/etudiants-candidats" target="_blank">EM Lyon Business School</a>, France.</h1>
 						</header>
 						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures on organizations and their audiences. 
 							Adopting a cultural perspective, I use quantitative text analysis and econometric models to examine phenomena such as institutional persistence and social evaluation. 
