--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						</header>
 						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures on organizations and their audiences. 
 							Adopting a cultural perspective, I use quantitative text analysis and econometric models to examine phenomena such as institutional persistence and social evaluation. 
-							My empirical settings include social housing and fine dining.</p>
+							My empirical settings include social housing and cultural experiences.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>-->
