--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						</header>
 						<p style="font-size: 26px; line-height:134%"> I explore the influence of culture and meaning structures on organizations and their audiences. 
 							Adopting a cultural perspective, I use quantitative text analysis and econometric models to examine phenomena such as institutional persistence and social evaluation. 
-							My empirical settings include social housing and cultural experiences.</p>
+							My empirical settings include social housing and cultural experiences. For example, I examined how public housing has persisted as an institution for nearly a century in Vienna by continually drawing on and adapting cultural elements, using dynamic modeling of discourse (DMD) to reveal how external environments shape its meaning in a coauthored paper published in Organization Studies.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>-->
