--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			    <h2 style="margin: 0; font-size: 24px;">PhD Candidate</h2>
 			    <a href="mailto:ashur@em-lyon.com" style="text-decoration: none; color: inherit;">ashur@em-lyon.com</a>
 			    <span style="margin: 0 10px;">|</span>
-			    <a href="pdf/Parham_Ashur_CV_Feb 25.pdf" download="Parham_Ashur_CV_Feb 25.pdf" target="_blank" style="text-decoration: none; color: inherit;">Download CV</a>
+			    <a href="pdf/Parham_Ashur_CV_April 25.pdf" download="Parham_Ashur_CV_April 25.pdf" target="_blank" style="text-decoration: none; color: inherit;">Download CV</a>
 			  </div>
 			</header>
 			<!--<header id="header" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; background-color: #f0f0f0; text-align: center;">
@@ -116,7 +116,7 @@
 						I studied economics at Allameh Tabataba'i University (BA) and the University of Amsterdam (MSc), as well as innovation and management at SKEMA Business School (MSc).</p>
 
 						<ul class="actions">
-							<li><a href="pdf/Parham_Ashur_CV_Feb 25.pdf" download="Parham_Ashur_CV_Feb 25.pdf" class="button" target="_blank">Download my CV</a></li>
+							<li><a href="pdf/Parham_Ashur_CV_April 25.pdf" download="Parham_Ashur_CV_April 25.pdf" class="button" target="_blank">Download my CV</a></li>
 							<!-- <li><a href="https://github.com/parham-ashur" class="button" target="_blank">Check my GitHub</a></li>-->
 						</ul>
 					</section> 
