--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-		<link rel="icon" type="images/png" sizes="32x32" href="favicon-32x32.png?">
-		<link rel="icon" type="images/png" sizes="16x16" href="favicon-16x16.png?">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 		<!-- <link rel="manifest" href="site.webmanifest"> -->
 
 		<!-- google verification --> 
@@ -103,7 +103,7 @@
 
 				<!-- Two -->
 	
-					<section id="two">
+					<section id="about">
 						<h2>About me</h2>
 						<p style="font-size: 26px; line-height:134%">
 						I am an organizational researcher and a PhD candidate at EM Lyon Business School, where I teach Strategy and Microeconomics in the 
@@ -140,7 +140,7 @@
 
 					</section> -->
 
-					<section id="two">
+					<section id="updates">
 						<h2>Updates</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -195,7 +195,7 @@
 					</section> 
 
 
-					<section id="two">
+					<section id="collaborators">
 						<h2>Collaborators</h2>
 						<p>
 							I owe immense gratitude to the brilliant colleagues who have shared this journey with me, each contributing unique insights and guidance. 
