--- a/index.html
+++ b/index.html
@@ -207,7 +207,13 @@
 					</section> 
 
 
-
+					<section id="joy">
+					  <h2>Joy</h2>
+					  <p>
+					    I love capturing the bold lines and contrasts in black and white— 
+					    explore my <a href="photography.html">photography</a> and share in that joy.
+					  </p>
+					</section>
 				<!-- Three 
 					<section id="three">
 						<h2>Get In Touch</h2>
