--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 					<section id="joy">
 					  <h2>Joy</h2>
 					  <p>
-					    I love capturing the bold lines and contrasts in black and white— 
+					    I love capturing the bold lines and contrasts— 
 					    explore my <a href="photography.html">photography</a> and share in that joy.
 					  </p>
 					</section>
