--- a/photography.html
+++ b/photography.html
@@ -59,47 +59,47 @@
   <script>
     // Define images and captions
     const images = [
-      { src: 'web/photo1.webp', caption: 'Bocconi University, Milan (May 2025)' },
-      { src: 'web/photo2.webp', caption: 'Bocconi University, Milan (May 2025)' },
-      { src: 'web/photo3.webp', caption: 'Bocconi University, Milan (May 2025)' },
-      { src: 'web/photo4.webp', caption: 'Bocconi University, Milan (May 2025)' },
-      { src: 'web/photo5.webp', caption: 'Street in Milan (May 2025)' },
-      { src: 'web/photo6.webp', caption: 'Museo del Novecento (May 2025)' },
-      { src: 'web/photo7.webp', caption: 'Museo del Novecento (May 2025)' },
-      { src: 'web/photo8.webp', caption: 'Museo del Novecento (May 2025)' },
-      { src: 'web/photo9.webp', caption: 'Museo del Novecento (May 2025)' },
-      { src: 'web/photo10.webp', caption: 'Pinacoteca di Brera (May 2025)' },
-      { src: 'web/photo11.webp', caption: 'Villa Necchi Campiglio (May 2025)' },
-      { src: 'web/photo12.webp', caption: 'Villa Necchi Campiglio (May 2025)' },
-      { src: 'web/photo13.webp', caption: 'Milan Conservatory (May 2025)' },
-      { src: 'web/photo14.webp', caption: 'Milan Conservatory (May 2025)' },
-      { src: 'web/photo15.webp', caption: 'Lake Como (June 2025)' },
-      { src: 'web/photo16.webp', caption: 'Lake Como (June 2025)' },
-      { src: 'web/photo17.webp', caption: 'Lake Como (June 2025)' },
-      { src: 'web/photo18.webp', caption: 'Lake Como (June 2025)' },
-      { src: 'web/photo19.webp', caption: 'Museo Pinacoteca Civica (June 2025)' },
-      { src: 'web/photo20.webp', caption: 'Museo Pinacoteca Civica (June 2025)' },
-      { src: 'web/photo21.webp', caption: 'Cityscapes of Milan (June 2025)' },
-      { src: 'web/photo22.webp', caption: 'Cityscapes of Milan (June 2025)' },
-      { src: 'web/photo23.webp', caption: 'Cityscapes of Milan (June 2025)' },
-      { src: 'web/photo24.webp', caption: 'Cityscapes of Milan (June 2025)' },
-      { src: 'web/photo25.webp', caption: 'Bocconi University, Milan (June 2025)' },
-      { src: 'web/photo26.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo27.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo28.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo29.webp', caption: 'Cityscapes of Milan (June 2025)' },
-      { src: 'web/photo30.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo31.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo32.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo33.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo34.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo35.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo36.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo37.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo38.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo39.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo40.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo41.webp', caption: 'Fondazione Prada, Milan (June 2025)' }
+      { src: '/web/photo1.webp', caption: 'Bocconi University, Milan (May 2025)' },
+      { src: '/web/photo2.webp', caption: 'Bocconi University, Milan (May 2025)' },
+      { src: '/web/photo3.webp', caption: 'Bocconi University, Milan (May 2025)' },
+      { src: '/web/photo4.webp', caption: 'Bocconi University, Milan (May 2025)' },
+      { src: '/web/photo5.webp', caption: 'Street in Milan (May 2025)' },
+      { src: '/web/photo6.webp', caption: 'Museo del Novecento (May 2025)' },
+      { src: '/web/photo7.webp', caption: 'Museo del Novecento (May 2025)' },
+      { src: '/web/photo8.webp', caption: 'Museo del Novecento (May 2025)' },
+      { src: '/web/photo9.webp', caption: 'Museo del Novecento (May 2025)' },
+      { src: '/web/photo10.webp', caption: 'Pinacoteca di Brera (May 2025)' },
+      { src: '/web/photo11.webp', caption: 'Villa Necchi Campiglio (May 2025)' },
+      { src: '/web/photo12.webp', caption: 'Villa Necchi Campiglio (May 2025)' },
+      { src: '/web/photo13.webp', caption: 'Milan Conservatory (May 2025)' },
+      { src: '/web/photo14.webp', caption: 'Milan Conservatory (May 2025)' },
+      { src: '/web/photo15.webp', caption: 'Lake Como (June 2025)' },
+      { src: '/web/photo16.webp', caption: 'Lake Como (June 2025)' },
+      { src: '/web/photo17.webp', caption: 'Lake Como (June 2025)' },
+      { src: '/web/photo18.webp', caption: 'Lake Como (June 2025)' },
+      { src: '/web/photo19.webp', caption: 'Museo Pinacoteca Civica (June 2025)' },
+      { src: '/web/photo20.webp', caption: 'Museo Pinacoteca Civica (June 2025)' },
+      { src: '/web/photo21.webp', caption: 'Cityscapes of Milan (June 2025)' },
+      { src: '/web/photo22.webp', caption: 'Cityscapes of Milan (June 2025)' },
+      { src: '/web/photo23.webp', caption: 'Cityscapes of Milan (June 2025)' },
+      { src: '/web/photo24.webp', caption: 'Cityscapes of Milan (June 2025)' },
+      { src: '/web/photo25.webp', caption: 'Bocconi University, Milan (June 2025)' },
+      { src: '/web/photo26.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo27.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo28.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo29.webp', caption: 'Cityscapes of Milan (June 2025)' },
+      { src: '/web/photo30.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo31.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo32.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo33.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo34.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo35.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo36.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo37.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo38.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo39.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo40.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: '/web/photo41.webp', caption: 'Fondazione Prada, Milan (June 2025)' }
     ];
 
     // Fisher–Yates shuffle
