--- a/photography.html
+++ b/photography.html
@@ -107,7 +107,12 @@
       { src: 'web/photo37.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
       { src: 'web/photo38.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
       { src: 'web/photo39.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
-      { src: 'web/photo40.webp', caption: 'Fondazione Prada, Milan (June 2025)' }
+      { src: 'web/photo40.webp', caption: 'Fondazione Prada, Milan (June 2025)' },
+      { src: 'web/photo42.webp', caption: 'Bocconi University, Milan (June 2025)' },
+      { src: 'web/photo43.webp', caption: 'Lugano (June 2025)' },
+      { src: 'web/photo44.webp', caption: 'Lugano Funiculaire (June 2025)' },
+      { src: 'web/photo45.webp', caption: 'Train to Lugano (June 2025)' },
+      { src: 'web/photo47.webp', caption: 'Cityscapes of Lugano (June 2025)' }
     ];
 
     // Shuffle and create gallery
