--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			  <div style="position: absolute; bottom: 0; left: 0; right: 0; text-align: center; padding-bottom: 20px;">
 			    <h2 style="margin: 0; font-size: 36px;">Parham Ashur</h2>
 			    <h2 style="margin: 0; font-size: 24px;">PhD Candidate</h2>
-			    <a href="mailto:ashur@em-lyon.com" style="text-decoration: none; color: inherit;">ashur@em-lyon.com</a>
+			    <a href="mailto:parham.ashur@gmail.com" style="text-decoration: none; color: inherit;">parham.ashur@gmail.com</a>
 			    <span style="margin: 0 10px;">|</span>
 			    <a href="pdf/Parham_Ashur_CV_April 25.pdf" download="Parham_Ashur_CV_April 25.pdf" target="_blank" style="text-decoration: none; color: inherit;">Download CV</a>
 			  </div>
@@ -599,3 +599,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
