--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			    <h2 style="margin: 0; font-size: 24px;">PhD Candidate</h2>
 			    <a href="mailto:parham.ashur@gmail.com" style="text-decoration: none; color: inherit;">parham.ashur@gmail.com</a>
 			    <span style="margin: 0 10px;">|</span>
-			    <a href="pdf/Parham_Ashur_CV_April 25.pdf" download="Parham_Ashur_CV_April 25.pdf" target="_blank" style="text-decoration: none; color: inherit;">Download CV</a>
+			    <a href="pdf/Parham_Ashur_CV_nov2025.pdf" download="Parham_Ashur_CV_nov2025.pdf" target="_blank" style="text-decoration: none; color: inherit;">Download CV</a>
 			  </div>
 			</header>
 			<!--<header id="header" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; background-color: #f0f0f0; text-align: center;">
@@ -599,4 +599,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
