--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 						<p>
 							I owe immense gratitude to the brilliant colleagues who have shared this journey with me, each contributing unique insights and guidance. 
 							For a deeper understanding of my work and approach, these individuals are the best to ask. At emlyon, I’ve had the honor of collaborating 
-							with Bernard Forgues, Christof Brandtner, Tao Han, and Thinley Tharchen. Beyond emlyon, my work has been enriched through collaboration 
+							with Bernard Forgues, Christof Brandtner, Giada Di Stefano, Tao Han, and Thinley Tharchen. Beyond emlyon, my work has been enriched through collaboration 
 							with Anne Christophe and Naomi Havron at École Normale Supérieure, Felix Schoeller at MIT’s Media Lab, and Gönül Doğan at the University of Cologne.
 						</p>
 
@@ -599,5 +599,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
